syntax = "proto3";

package cosmoeth.cosmoeth;

option go_package = "CosmoEth/x/cosmoeth/types";

// Msg defines the Msg service.
service Msg {
  rpc AddState (MsgAddState) returns (MsgAddStateResponse);
}
message MsgAddState {
           string creator       = 1;
           string address       = 2;
           uint64 height        = 3;
  repeated string storageProofs = 4;
}

message MsgAddStateResponse {}

